[gd_scene load_steps=12 format=3 uid="uid://bevugdkcaxjr3"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7mmla"]
[ext_resource type="Texture2D" uid="uid://cre0ubgq4nu6h" path="res://assets/crosshair_main.png" id="2_7e26f"]
[ext_resource type="Texture2D" uid="uid://doc8ur52owxys" path="res://assets/crosshair_hit.png" id="3_y6qrd"]
[ext_resource type="PackedScene" uid="uid://c8o5ew5sdyxh6" path="res://scenes/pause_menu.tscn" id="4_0uhqr"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xysup"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_83pgw"]

[sub_resource type="Sky" id="Sky_3tf62"]
sky_material = SubResource("ShaderMaterial_83pgw")

[sub_resource type="Environment" id="Environment_6f0y4"]
background_mode = 1
background_color = Color(0.647059, 0.764706, 1, 1)
sky = SubResource("Sky_3tf62")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ek6oq"]
radius = 0.57483
height = 2.17477

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gx33c"]
bg_color = Color(0.133333, 0.145098, 0.717647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rqw4"]
bg_color = Color(0.196078, 0.945098, 0.270588, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01527, 0)
script = ExtResource("1_7mmla")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_xysup")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
environment = SubResource("Environment_6f0y4")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, -1, -100)
collision_mask = 2
collide_with_areas = true
debug_shape_thickness = 1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0628227, -0.0282702)
shape = SubResource("CapsuleShape3D_ek6oq")

[node name="SprintCooldown" type="Timer" parent="."]

[node name="SprintRecharge" type="Timer" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="StaminaBar" type="ProgressBar" parent="UI/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -104.0
offset_right = 226.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/fill = SubResource("StyleBoxFlat_gx33c")
max_value = 50.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="UI/Control"]
layout_mode = 1
offset_right = 450.0
offset_bottom = 50.0
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_3rqw4")

[node name="CenterContainer" type="CenterContainer" parent="UI/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairMain" type="TextureRect" parent="UI/Control/CenterContainer"]
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
texture = ExtResource("2_7e26f")
expand_mode = 1
stretch_mode = 4

[node name="CrosshairHit" type="TextureRect" parent="UI/Control/CenterContainer"]
visible = false
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
texture = ExtResource("3_y6qrd")
expand_mode = 1
stretch_mode = 4

[node name="CrosshairTimer" type="Timer" parent="UI"]
wait_time = 0.1
one_shot = true

[node name="PauseMenu" parent="." instance=ExtResource("4_0uhqr")]

[connection signal="timeout" from="SprintCooldown" to="." method="_on_sprint_cooldown_timeout"]
[connection signal="timeout" from="SprintRecharge" to="." method="_on_sprint_recharge_timeout"]
[connection signal="timeout" from="UI/CrosshairTimer" to="." method="_on_crosshair_timer_timeout"]
[connection signal="exit_pause_menu" from="PauseMenu" to="." method="_on_pause_menu_exit_pause_menu"]
